pokemon search API

--- a/JS_projects/pokemon/index.html
+++ b/JS_projects/pokemon/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Number Search</title>
+  <title>Pokémon Search</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
-    <input type="number" id="numberInput" placeholder="Enter a number">
-    <button onclick="searchNumber()">Search</button>
+    <input type="number" id="numberInput" placeholder="Enter Pokémon ID" min="1">
+    <button onclick="searchPokemon()">Search</button>
+    <div id="pokemonCard" class="pokemon-card"></div>
   </div>
   <script src="script.js"></script>
 </body>
