--- a/web transfer/Unaitas.html
+++ b/web transfer/Unaitas.html
@@ -281,8 +281,9 @@ var _ckyStyles = {"css":".cky-overlay{background: #000000; opacity: 0.4; positio
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <img class="img-fluid" src="/IMAGES/Office-Front-e1717766689914-768x420.png" />
+                    <img class="img-fluid" src="/IMAGES/Office-Front-e1717766689914-768x420.png" style="border-radius: 15px; box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3); transition:transform 0.3s ease, box-shadow 0.3s ease;">
                 </div>
+                
              
         </div>
     </section>
