--- a/web transfer/Service/Contact Information.html
+++ b/web transfer/Service/Contact Information.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="profile" href="https://gmpg.org/xfn/11">
 
-	<title>Contact Us</title>
+	<title>Keystone DT Sacco</title>
 <meta name='robots' content='max-image-preview:large' />
 <link rel='dns-prefetch' href='//cdn.rawgit.com' />
 <link rel='dns-prefetch' href='//unpkg.com' />
@@ -95,7 +95,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 	//display: none;
 }		</style>
 		<noscript><style> .wpb_animate_when_almost_visible { opacity: 1; }</style></noscript><style type="text/css">/** Mega Menu CSS: fs **/</style>
-</head>	
+</head>
 
 <body class="page-template-default page page-id-55 wp-custom-logo mega-menu-menu-1 wpb-js-composer js-comp-ver-6.10.0 vc_responsive">
 <div id="page" class="site">
@@ -118,7 +118,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<ul>
 			</div>
 			<div class="ctas">
-				<a href="/Service/Contact Information – Unaitas.html" class="btn">Join Now</a>
+				<a href="/Service/Contact Information.html" class="btn">Join Now</a>
 			</div>
 		</div>
 	</div>
@@ -150,15 +150,15 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
         </a>
 <ul class="mega-sub-menu">
 <li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-75' id='mega-menu-item-75'>
-    <a class="mega-menu-link" href="https://keystonedtsacco.co.ke/about-us/mission-vision/">mission & Vision</a>
+    <a class="mega-menu-link" href="/Service/Mission Vision.html">mission & Vision</a>
 </li>
 <li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-70' id='mega-menu-item-70'>
-    <a class="mega-menu-link" href="https://keystonedtsacco.co.ke/about-us/management-and-staff/">Management & Staff</a>
+    <a class="mega-menu-link" href="/Service/staff.html">Management & Staff</a>
 </li>
 </ul>
 </li>
 <li class='mega-menu-item mega-menu-item-type-custom mega-menu-item-object-custom mega-menu-item-has-children mega-align-bottom-left mega-menu-flyout mega-menu-item-79' id='mega-menu-item-79'>
-    <a class="mega-menu-link" href="https://keystonedtsacco.co.ke/services/" aria-haspopup="true" aria-expanded="false" tabindex="0">Services<span class="mega-indicator"></span>
+    <a class="mega-menu-link" href="/Service/Services.html" aria-haspopup="true" aria-expanded="false" tabindex="0">Services<span class="mega-indicator"></span>
     </a>
 </li>
 <li class='mega-menu-item mega-menu-item-type-custom mega-menu-item-object-custom mega-menu-item-has-children mega-align-bottom-left mega-menu-flyout mega-menu-item-80' id='mega-menu-item-80'>
@@ -168,11 +168,13 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 </a>
 <ul class="mega-sub-menu">
 <li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-334' id='mega-menu-item-334'>
-    <a class="mega-menu-link" href="https://keystonedtsacco.co.ke/products/fosa-products/">FOSA Product</a>
+    <a class="mega-menu-link" href="/Service/Fosa.html">FOSA Product</a>
 </li>
-<li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-333' id='mega-menu-item-333'><a class="mega-menu-link" href="https://keystonedtsacco.co.ke/products/bosa-products/">BOSA Products</a>
+<li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-333' id='mega-menu-item-333'>
+    <a class="mega-menu-link" href="/Service/BOSA.html">BOSA Products</a>
 </li>
-<li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-332' id='mega-menu-item-332'><a class="mega-menu-link" href="https://keystonedtsacco.co.ke/products/saving-products/">Saving Products</a>
+<li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-332' id='mega-menu-item-332'>
+    <a class="mega-menu-link" href="/Service/SAVINGPRODUCTS.html">Saving Products</a>
 </li>   
 </ul>
 </li>
@@ -182,24 +184,24 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
     </a>
 <ul class="mega-sub-menu">
 <li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-379' id='mega-menu-item-379'>
-    <a class="mega-menu-link" href="https://keystonedtsacco.co.ke/downloads/downloadable-forms/">Customer Forms</a>
+    <a class="mega-menu-link" href="/Service/customerform.html">Customer Forms</a>
 </li>
 <li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-378' id='mega-menu-item-378'>
-    <a class="mega-menu-link" href="https://keystonedtsacco.co.ke/download-category/tender-documents/">Tender Documents</a>
+    <a class="mega-menu-link" href="/Service/tender.html">Tender Documents</a>
 </li>
 </ul>
 </li><li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-has-children mega-align-bottom-left mega-menu-flyout mega-menu-item-69' id='mega-menu-item-69'>
-    <a class="mega-menu-link" href="https://keystonedtsacco.co.ke/careers/" aria-haspopup="true" aria-expanded="false" tabindex="0">Carreers<span class="mega-indicator">
+    <a class="mega-menu-link" href="/Service/carreers.html" aria-haspopup="true" aria-expanded="false" tabindex="0">Carreers<span class="mega-indicator">
 
     </span>
 </a>
 
 </li>
 <li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-62' id='mega-menu-item-62'>
-    <a class="mega-menu-link" href="https://keystonedtsacco.co.ke/contacts/" tabindex="0">Contacts</a>
+    <a class="mega-menu-link" href="/Service/Contact Information.html" tabindex="0">Contacts</a>
 </li>
 <li class='mega-menu-item mega-menu-item-type-custom mega-menu-item-object-custom mega-menu-item-has-children mega-align-bottom-left mega-menu-flyout mega-menu-item-77' id='mega-menu-item-77'>
-    <a class="mega-menu-link" href="https://keystonedtsacco.co.ke/terms-and-conditions/" aria-haspopup="true" aria-expanded="false" tabindex="0">Terms And Conditions<span class="mega-indicator">
+    <a class="mega-menu-link" href="/Service/terms.html" aria-haspopup="true" aria-expanded="false" tabindex="0">Terms And Conditions<span class="mega-indicator">
 
     </span>
 </a>
