--- a/web transfer/index.html
+++ b/web transfer/index.html
@@ -118,7 +118,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<ul>
 			</div>
 			<div class="ctas">
-				<a href="/Service/Contact Information – Unaitas.html" class="btn">Join Now</a>
+				<a href="/Service/Contact Information.html" class="btn">Join Now</a>
 			</div>
 		</div>
 	</div>
@@ -150,15 +150,15 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
         </a>
 <ul class="mega-sub-menu">
 <li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-75' id='mega-menu-item-75'>
-    <a class="mega-menu-link" href="https://keystonedtsacco.co.ke/about-us/mission-vision/">mission & Vision</a>
+    <a class="mega-menu-link" href="/Service/Mission Vision.html">mission & Vision</a>
 </li>
 <li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-70' id='mega-menu-item-70'>
-    <a class="mega-menu-link" href="https://keystonedtsacco.co.ke/about-us/management-and-staff/">Management & Staff</a>
+    <a class="mega-menu-link" href="/Service/staff.html">Management & Staff</a>
 </li>
 </ul>
 </li>
 <li class='mega-menu-item mega-menu-item-type-custom mega-menu-item-object-custom mega-menu-item-has-children mega-align-bottom-left mega-menu-flyout mega-menu-item-79' id='mega-menu-item-79'>
-    <a class="mega-menu-link" href="https://keystonedtsacco.co.ke/services/" aria-haspopup="true" aria-expanded="false" tabindex="0">Services<span class="mega-indicator"></span>
+    <a class="mega-menu-link" href="/Service/Services.html" aria-haspopup="true" aria-expanded="false" tabindex="0">Services<span class="mega-indicator"></span>
     </a>
 </li>
 <li class='mega-menu-item mega-menu-item-type-custom mega-menu-item-object-custom mega-menu-item-has-children mega-align-bottom-left mega-menu-flyout mega-menu-item-80' id='mega-menu-item-80'>
@@ -168,11 +168,13 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 </a>
 <ul class="mega-sub-menu">
 <li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-334' id='mega-menu-item-334'>
-    <a class="mega-menu-link" href="https://keystonedtsacco.co.ke/products/fosa-products/">FOSA Product</a>
+    <a class="mega-menu-link" href="/Service/Fosa.html">FOSA Product</a>
 </li>
-<li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-333' id='mega-menu-item-333'><a class="mega-menu-link" href="https://keystonedtsacco.co.ke/products/bosa-products/">BOSA Products</a>
+<li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-333' id='mega-menu-item-333'>
+    <a class="mega-menu-link" href="/Service/BOSA.html">BOSA Products</a>
 </li>
-<li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-332' id='mega-menu-item-332'><a class="mega-menu-link" href="https://keystonedtsacco.co.ke/products/saving-products/">Saving Products</a>
+<li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-332' id='mega-menu-item-332'>
+    <a class="mega-menu-link" href="/Service/SAVINGPRODUCTS.html">Saving Products</a>
 </li>   
 </ul>
 </li>
@@ -182,24 +184,24 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
     </a>
 <ul class="mega-sub-menu">
 <li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-379' id='mega-menu-item-379'>
-    <a class="mega-menu-link" href="https://keystonedtsacco.co.ke/downloads/downloadable-forms/">Customer Forms</a>
+    <a class="mega-menu-link" href="/Service/customerform.html">Customer Forms</a>
 </li>
 <li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-378' id='mega-menu-item-378'>
-    <a class="mega-menu-link" href="https://keystonedtsacco.co.ke/download-category/tender-documents/">Tender Documents</a>
+    <a class="mega-menu-link" href="/Service/tender.html">Tender Documents</a>
 </li>
 </ul>
 </li><li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-has-children mega-align-bottom-left mega-menu-flyout mega-menu-item-69' id='mega-menu-item-69'>
-    <a class="mega-menu-link" href="https://keystonedtsacco.co.ke/careers/" aria-haspopup="true" aria-expanded="false" tabindex="0">Carreers<span class="mega-indicator">
+    <a class="mega-menu-link" href="/Service/carreers.html" aria-haspopup="true" aria-expanded="false" tabindex="0">Carreers<span class="mega-indicator">
 
     </span>
 </a>
 
 </li>
 <li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-62' id='mega-menu-item-62'>
-    <a class="mega-menu-link" href="https://keystonedtsacco.co.ke/contacts/" tabindex="0">Contacts</a>
+    <a class="mega-menu-link" href="/Service/Contact Information.html" tabindex="0">Contacts</a>
 </li>
 <li class='mega-menu-item mega-menu-item-type-custom mega-menu-item-object-custom mega-menu-item-has-children mega-align-bottom-left mega-menu-flyout mega-menu-item-77' id='mega-menu-item-77'>
-    <a class="mega-menu-link" href="https://keystonedtsacco.co.ke/terms-and-conditions/" aria-haspopup="true" aria-expanded="false" tabindex="0">Terms And Conditions<span class="mega-indicator">
+    <a class="mega-menu-link" href="/Service/terms.html" aria-haspopup="true" aria-expanded="false" tabindex="0">Terms And Conditions<span class="mega-indicator">
 
     </span>
 </a>
@@ -298,12 +300,12 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                 <div class="col-md-4 pb-4">
                     <div class="card">
                         <div class="img-wrapper">
-                            <a href="/services/Services – Keystone DT Sacco Society.html"><img class="img-fluid" src="/IMAGES/Salary.png"> </a>
+                            <a href="/Service/Services.html"><img class="img-fluid" src="/IMAGES/Salary.png"> </a>
                         </div> 
                         <div class="card-body" > 
                             <h3>Salary Processing</h3>
                             <p></p>
-                            <a href="/services/Services – Keystone DT Sacco Society.html" class="btn hover-effect" style="color: purple; border-color: purple; border: 2px solid purple; padding: 10px;" >Learn More</a>
+                            <a href="/Service/Services.html" class="btn hover-effect" style="color: purple; border-color: purple; border: 2px solid purple; padding: 10px;" >Learn More</a>
                                
                         </div>
                     </div>
@@ -313,12 +315,12 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                 <div class="col-md-4 pb-4">
                     <div class="card">
                         <div class="img-wrapper">
-                            <a href="/services/Services – Keystone DT Sacco Society.html" ><img class="img-fluid" src="/IMAGES/ATM.png"> </a>
+                            <a href="/Service/Services.html" ><img class="img-fluid" src="/IMAGES/ATM.png"> </a>
                         </div> 
                         <div class="card-body"> 
                             <h3>ATM Services</h3>
                             <p></p>
-                            <a href="/services/Services – Keystone DT Sacco Society.html" class="btn" style="color: purple; border-color: purple; border: 2px solid purple; padding: 10px;">Learn More</a>
+                            <a href="/Service/Services.html" class="btn" style="color: purple; border-color: purple; border: 2px solid purple; padding: 10px;">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -327,12 +329,12 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                 <div class="col-md-4 pb-4">
                     <div class="card">
                         <div class="img-wrapper">
-                            <a href="/services/Services – Keystone DT Sacco Society.html"><img class="img-fluid" src="/IMAGES/Mobile-Banking.png"> </a>
+                            <a href="/Service/Services.html"><img class="img-fluid" src="/IMAGES/Mobile-Banking.png"> </a>
                         </div> 
                         <div class="card-body"> 
                             <h3>Mobile Banking</h3>
                             <p></p>
-                            <a href="/services/Services – Keystone DT Sacco Society.html" class="btn" style="color: purple; border-color: purple; border: 2px solid purple; padding: 10px;">Learn More</a>
+                            <a href="/Service/Services.html" class="btn" style="color: purple; border-color: purple; border: 2px solid purple; padding: 10px;">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -341,12 +343,12 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                 <div class="col-md-4 pb-4">
                     <div class="card">
                         <div class="img-wrapper">
-                            <a href="/services/Services – Keystone DT Sacco Society.html"><img class="img-fluid" src="/IMAGES/Cheque.png"> </a>
+                            <a href="/Service/Services.html"><img class="img-fluid" src="/IMAGES/Cheque.png"> </a>
                         </div> 
                         <div class="card-body"> 
                             <h3>Cheque Clearance</h3>
                             <p></p>
-                            <a href="/services/Services – Keystone DT Sacco Society.html" class="btn" style="color: purple; border-color: purple; border: 2px solid purple; padding: 10px;">Learn More</a>
+                            <a href="/Service/Services.html" class="btn" style="color: purple; border-color: purple; border: 2px solid purple; padding: 10px;">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -355,12 +357,12 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                 <div class="col-md-4 pb-4">
                     <div class="card">
                         <div class="img-wrapper">
-                            <a href="/services/Services – Keystone DT Sacco Society.html"><img class="img-fluid" src="/IMAGES/1-1.png"> </a>
+                            <a href="/Service/Services.html"><img class="img-fluid" src="/IMAGES/1-1.png"> </a>
                         </div> 
                         <div class="card-body"> 
                             <h3>ATM Services</h3>
                             <p></p>
-                            <a href="/services/Services – Keystone DT Sacco Society.html" class="btn" style="color: purple; border-color: purple; border: 2px solid purple; padding: 10px;">Learn More</a>
+                            <a href="/Service/Services.html" class="btn" style="color: purple; border-color: purple; border: 2px solid purple; padding: 10px;">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -369,12 +371,12 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                 <div class="col-md-4 pb-4">
                     <div class="card">
                         <div class="img-wrapper">
-                            <a href="/services/Services – Keystone DT Sacco Society.html"><img class="img-fluid" src="/IMAGES/Meeting-768x576-1-quedr1i08fs5sua0mmxcvvqdjzrxzn9v059j1uvy3s.jpeg"> </a>
+                            <a href="/Service/Services.html"><img class="img-fluid" src="/IMAGES/Meeting-768x576-1-quedr1i08fs5sua0mmxcvvqdjzrxzn9v059j1uvy3s.jpeg"> </a>
                         </div> 
                         <div class="card-body"> 
                             <h3>Advanced Products</h3>
                             <p></p>
-                            <a href="/services/Services – Keystone DT Sacco Society.html" class="btn" style="color: purple; border-color: purple; border: 2px solid purple; padding: 10px;">Learn More</a>
+                            <a href="/Service/Services.html" class="btn" style="color: purple; border-color: purple; border: 2px solid purple; padding: 10px;">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -515,7 +517,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                         <div class="content">
                             <h1>03.</h1>                            <h3></h3>
 <p>Check out our team, equipped to help you achieve your goals and provide expert advice on planning your financial future.</p>
-                            <a class="btn" href="/services/staff.html">Read More</a>                        </div>
+                            <a class="btn" href="/Service/staff.html">Read More</a>                        </div>
                     </div>
                 </div>
              
