--- a/web transfer/Service/Contact Information.html
+++ b/web transfer/Service/Contact Information.html
@@ -227,7 +227,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
         <div class="row">
             <div class="col-md-6">
                 <h2 class="title">Have Questions?<br> Get in touch!</h2>
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d210.72490969896376!2d34.752492627186854!3d-0.10561887130440004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182aa494d80333ed%3A0xf142fbe729303d94!2sKEYSTONE%20DT%20SACCO%20SOCIETY%20LIMITED!5e1!3m2!1sen!2ske!4v1727114494984!5m2!1sen!2ske" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d210.72490969896376!2d34.752492627186854!3d-0.10561887130440004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182aa494d80333ed%3A0xf142fbe729303d94!2sKEYSTONE%20DT%20SACCO%20SOCIETY%20LIMITED!5e1!3m2!1sen!2ske!4v1727114494984!5m2!1sen!2ske" width="250px" height="450px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="col-md-6">
                 <div class="form-wrapper">
