--- a/web transfer/Service/Mission Vision.html
+++ b/web transfer/Service/Mission Vision.html
@@ -214,7 +214,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 	</header>
 <section class="banner" style="color: purple;">
                     <img class="img-fluid landing-img" src="/IMAGES/mission.png" alt="What Drives Us ">
-            <h2 class="page-title" style="color: purple;">Mission And Vision </h2>
+            <h2 class="page-title" style="color: black;">Mission And Vision </h2>
     <div class="breadcrumbs">
         <a href="/index.html" style="color: blue;">Home</a><i class="fas fa-chevron-right"></i><span class="current">Mission And Vision</span>
     </div>
