BOSA p[age comeplted

--- a/web transfer/Service/Fosa.html
+++ b/web transfer/Service/Fosa.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="profile" href="https://gmpg.org/xfn/11">
 
-	<title>Our History &#8211; Unaitas</title>
+	<title>FOSA &#8211; keystonedtsacco</title>
 <meta name='robots' content='max-image-preview:large' />
 <link rel='dns-prefetch' href='//cdn.rawgit.com' />
 <link rel='dns-prefetch' href='//unpkg.com' />
@@ -14,8 +14,9 @@
 <link rel='dns-prefetch' href='//use.fontawesome.com' />
 <link rel='dns-prefetch' href='//cdn.jsdelivr.net' />
 <link rel='dns-prefetch' href='//cdn.datatables.net' />
+<!--
 <link rel="alternate" type="application/rss+xml" title="Unaitas &raquo; Feed" href="https://unaitas.com/feed/" />
-<link rel="alternate" type="application/rss+xml" title="Unaitas &raquo; Comments Feed" href="https://unaitas.com/comments/feed/" />
+<link rel="alternate" type="application/rss+xml" title="Unaitas &raquo; Comments Feed" href="https://unaitas.com/comments/feed/" />-->
 <script>
 window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15.0.3\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15.0.3\/svg\/","svgExt":".svg","source":{"concatemoji":"https:\/\/unaitas.com\/wp-includes\/js\/wp-emoji-release.min.js?ver=6.6.2"}};
 /*! This file is auto-generated */
@@ -216,7 +217,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 	</header>
 
 <section class="banner">
-                    <img class="img-fluid landing-img" src="/IMAGES/fOSA.png" alt="Our History ">
+                    <img class="img-fluid landing-img" src="/IMAGES/fOSA.png" alt="FOSA ">
             
                 <h2 class="page-title" style="color: black;">FOSA </h2>
     <div class="breadcrumbs">
