staff.png replaced

--- a/web transfer/Service/tender.html
+++ b/web transfer/Service/tender.html
@@ -217,9 +217,9 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 	</header>
 
 <section class="banner">
-                    <img class="img-fluid landing-img" src="/IMAGES/savings.jpg" alt="Tender Documents>
+                    <img class="img-fluid landing-img" src="/IMAGES/savings.jpg" alt="Tender Documents">
             
-                <h2 class="page-title" style="color: black;">Tender Documents </h2>
+                <h2 class="page-title" style="background-color: blue;">Tender Documents </h2>
     <div class="breadcrumbs">
         <a href="/index.html">Home</a><i class="fas fa-chevron-right"></i><span class="current" style="color: purple; font-weight: bold;">Tender Documents</span>
     </div>
