mission and vision updates

--- a/web transfer/Service/Mission Vision.html
+++ b/web transfer/Service/Mission Vision.html
@@ -220,7 +220,25 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
     </div>
 </section>
 
+<style>
+    .card {
+    /* Box shadow for 3D effect */
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+    /* Add some padding and border radius for aesthetics */
+    padding: 20px;
+    border-radius: 8px;
+    /* Transition for smooth hover effect */
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
+}
 
+/* Hover effect */
+.card:hover {
+    background-color: blue; /* Change to blue on hover */
+    box-shadow: 0 8px 25px rgba(0, 0, 0, 0.5); /* Increase shadow for more depth */
+    color: white; /* Change text color for better contrast */
+}
+
+</style>
     <section class="drive container">
         <div class="row">
             <div class="col-md-mx-auto">
