fosa and bosa updates

--- a/web transfer/Service/BOSA.html
+++ b/web transfer/Service/BOSA.html
@@ -216,7 +216,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 	</header>
 
 <section class="banner">
-                    <img class="img-fluid landing-img" src="/IMAGES/fOSA.png" alt="BOSA ">
+                    <img class="img-fluid landing-img" src="/IMAGES/mission.png" alt="BOSA ">
             
                 <h2 class="page-title" style="color: black;">BOSA </h2>
     <div class="breadcrumbs">
