--- a/web transfer/Service/Fosa.html
+++ b/web transfer/Service/Fosa.html
@@ -217,7 +217,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 	</header>
 
 <section class="banner">
-                    <img class="img-fluid landing-img" src="/IMAGES/fOSA.png" alt="FOSA ">
+                    <img class="img-fluid landing-img" src="/IMAGES/mission.png" alt="FOSA ">
             
                 <h2 class="page-title" style="color: black;">FOSA </h2>
     <div class="breadcrumbs">
