--- a/web transfer/Service/carreers.html
+++ b/web transfer/Service/carreers.html
@@ -220,7 +220,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             
                 <h2 class="page-title" style="color: black;">Carreers </h2>
     <div class="breadcrumbs">
-        <a href="/index.html">Home</a><i class="fas fa-chevron-right"></i><span class="current" style="color: purple; font-weight: bold;">SAVINGPRODUCTS</span>
+        <a href="/index.html">Home</a><i class="fas fa-chevron-right"></i><span class="current" style="color: purple; font-weight: bold;">Carreers</span>
     </div>
 </section>
 
@@ -228,7 +228,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 
 <section class="page-alternate">
     <div class="center-container">
-        <p style="color: purple;">Keyston Careers</p>
+        <p style="color: purple;">Keystone Careers</p>
         <ul>There are no new Openings yet</ul>
     </div>
 </section>
