--- a/web transfer/Service/Mission Vision.html
+++ b/web transfer/Service/Mission Vision.html
@@ -191,7 +191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 </li>
 </ul>
 </li><li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-has-children mega-align-bottom-left mega-menu-flyout mega-menu-item-69' id='mega-menu-item-69'>
-    <a class="mega-menu-link" href="/Service/carreers.html" aria-haspopup="true" aria-expanded="false" tabindex="0">Carreers<span class="mega-indicator">
+    <a class="mega-menu-link" href="/Service/carreers.html" aria-haspopup="true" aria-expanded="false" tabindex="0">Careers<span class="mega-indicator">
 
     </span>
 </a>
@@ -216,7 +216,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                     <img class="img-fluid landing-img" src="/IMAGES/mission.png" alt="What Drives Us ">
             <h2 class="page-title" style="color: black;">Mission And Vision </h2>
     <div class="breadcrumbs">
-        <a href="/index.html" style="color: blue;">Home</a><i class="fas fa-chevron-right"></i><span class="current">Mission And Vision</span>
+        <a href="/index.html" style="color: black;">Home</a><i class="fas fa-chevron-right"></i><span class="current" style="color: #000000;">Mission And Vision</span>
     </div>
 </section>
 
