--- a/web transfer/Service/carreers.html
+++ b/web transfer/Service/carreers.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="profile" href="https://gmpg.org/xfn/11">
 
-	<title>Carreers &#8211; keystonedtsacco</title>
+	<title>Careers &#8211; keystonedtsacco</title>
 <meta name='robots' content='max-image-preview:large' />
 <link rel='dns-prefetch' href='//cdn.rawgit.com' />
 <link rel='dns-prefetch' href='//unpkg.com' />
@@ -193,7 +193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 </li>
 </ul>
 </li><li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-has-children mega-align-bottom-left mega-menu-flyout mega-menu-item-69' id='mega-menu-item-69'>
-    <a class="mega-menu-link" href="/Service/carreers.html" aria-haspopup="true" aria-expanded="false" tabindex="0">Carreers<span class="mega-indicator">
+    <a class="mega-menu-link" href="/Service/carreers.html" aria-haspopup="true" aria-expanded="false" tabindex="0">Careers<span class="mega-indicator">
 
     </span>
 </a>
@@ -218,9 +218,9 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 <section class="banner">
                     <img class="img-fluid landing-img" src="/IMAGES/savings.jpg" alt="SAVINGPRODUCTS ">
             
-                <h2 class="page-title" style="color: black;">Carreers </h2>
+                <h2 class="page-title" style="color: black;">Careers </h2>
     <div class="breadcrumbs">
-        <a href="/index.html">Home</a><i class="fas fa-chevron-right"></i><span class="current" style="color: purple; font-weight: bold;">Carreers</span>
+        <a href="/index.html">Home</a><i class="fas fa-chevron-right"></i><span class="current" style="color: purple; font-weight: bold;">Careers</span>
     </div>
 </section>
 
