--- a/web transfer/index.html
+++ b/web transfer/index.html
@@ -214,7 +214,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 			</nav>
 		</div>
 	</header>
-
+<!--
 <section class="landing" >
     <div class="owl-carousel owl-theme landing-banner-slider">
                         <div class="slider-item">
@@ -231,7 +231,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                 
     </div>
     <a class="scroll-down" href="#about"><span></span></a> 
-</section>
+</section> -->
 
     <section class="mission" style="background-color: #0000ff;">
         <div class="row no-gutters" style="background-color: #0000ff;">
