--- a/web transfer/Service/BOSA.html
+++ b/web transfer/Service/BOSA.html
@@ -193,7 +193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 </li>
 </ul>
 </li><li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-has-children mega-align-bottom-left mega-menu-flyout mega-menu-item-69' id='mega-menu-item-69'>
-    <a class="mega-menu-link" href="/Service/carreers.html" aria-haspopup="true" aria-expanded="false" tabindex="0">Careers<span class="mega-indicator">
+    <a class="mega-menu-link" href="/Service/career.html" aria-haspopup="true" aria-expanded="false" tabindex="0">Careers<span class="mega-indicator">
 
     </span>
 </a>
@@ -418,7 +418,13 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<div class="logo-wrapper">
 					<img class="img-fluid" src="/IMAGES/keystone-dt-New-logo.jpeg-removebg-preview.png" alt="logo">	
 				</div>
-				<p>Keystone DT Sacco Ltd. was registered in 1977 under the Co-operative Societies Act, Cap 490 laws of Kenya, to provide members with an avenue for savings and affordable loans for advancement of their economic wellbeing and became operational in 1978.</p>
+				<p>
+					Keystone DT Sacco, formerly (KITE Sacco Ltd.) was registered in 1977 under the Co-operative Societies Act, Cap 490 laws of Kenya, to provide members with an avenue for savings and affordable loans for the advancement of their economic well-being and became operational in 1978	
+				</p>
+				<p>
+
+It occupies a rental office at Re-Insurance Plaza (Wedco Center) on the ground floor at Kisumu. It has a Front Office Section which offers banking services to members of the Society with effect from 29th April 1997. The Sacco has since opened its bond to allow anybody to be a member.
+				</p>
 			</div>
 			<div class="col-md-4 offset-1">
 				<h3>Address</h3>
