--- a/web transfer/Service/career.html
+++ b/web transfer/Service/career.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="profile" href="https://gmpg.org/xfn/11">
 
-	<title>Careers &#8211; keystonedtsacco</title>
+	<title>Career &#8211; keystonedtsacco</title>
 <meta name='robots' content='max-image-preview:large' />
 <link rel='dns-prefetch' href='//cdn.rawgit.com' />
 <link rel='dns-prefetch' href='//unpkg.com' />
@@ -193,7 +193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 </li>
 </ul>
 </li><li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-has-children mega-align-bottom-left mega-menu-flyout mega-menu-item-69' id='mega-menu-item-69'>
-    <a class="mega-menu-link" href="/Service/carreers.html" aria-haspopup="true" aria-expanded="false" tabindex="0">Careers<span class="mega-indicator">
+    <a class="mega-menu-link" href="/Service/career.html" aria-haspopup="true" aria-expanded="false" tabindex="0">Career<span class="mega-indicator">
 
     </span>
 </a>
@@ -218,9 +218,9 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 <section class="banner">
                     <img class="img-fluid landing-img" src="/IMAGES/savings.jpg" alt="SAVINGPRODUCTS ">
             
-                <h2 class="page-title" style="color: black;">Careers </h2>
+                <h2 class="page-title" style="color: black;">Career </h2>
     <div class="breadcrumbs">
-        <a href="/index.html">Home</a><i class="fas fa-chevron-right"></i><span class="current" style="color: purple; font-weight: bold;">Careers</span>
+        <a href="/index.html">Home</a><i class="fas fa-chevron-right"></i><span class="current" style="color: purple; font-weight: bold;">Career</span>
     </div>
 </section>
 
@@ -228,7 +228,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 
 <section class="page-alternate">
     <div class="center-container">
-        <p style="color: purple;">Keystone Careers</p>
+        <p style="color: purple;">Keystone Career</p>
         <ul>There are no new Openings yet</ul>
     </div>
 </section>
@@ -336,7 +336,13 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<div class="logo-wrapper">
 					<img class="img-fluid" src="/IMAGES/keystone-dt-New-logo.jpeg-removebg-preview.png" alt="logo">	
 				</div>
-				<p>Keystone DT Sacco Ltd. was registered in 1977 under the Co-operative Societies Act, Cap 490 laws of Kenya, to provide members with an avenue for savings and affordable loans for advancement of their economic wellbeing and became operational in 1978.</p>
+				<p></p>
+					Keystone DT Sacco, formerly (KITE Sacco Ltd.) was registered in 1977 under the Co-operative Societies Act, Cap 490 laws of Kenya, to provide members with an avenue for savings and affordable loans for the advancement of their economic well-being and became operational in 1978	
+				</p>
+				<p>
+
+It occupies a rental office at Re-Insurance Plaza (Wedco Center) on the ground floor at Kisumu. It has a Front Office Section which offers banking services to members of the Society with effect from 29th April 1997. The Sacco has since opened its bond to allow anybody to be a member.
+				</p>
 			</div>
 			<div class="col-md-4 offset-1">
 				<h3>Address</h3>
