carreer and mottos

--- a/web transfer/Service/Mission Vision.html
+++ b/web transfer/Service/Mission Vision.html
@@ -191,7 +191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 </li>
 </ul>
 </li><li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-has-children mega-align-bottom-left mega-menu-flyout mega-menu-item-69' id='mega-menu-item-69'>
-    <a class="mega-menu-link" href="/Service/career.html" aria-haspopup="true" aria-expanded="false" tabindex="0">Careers<span class="mega-indicator">
+    <a class="mega-menu-link" href="/Service/career.html" aria-haspopup="true" aria-expanded="false" tabindex="0">Career<span class="mega-indicator">
 
     </span>
 </a>
@@ -248,9 +248,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                         <div class="number">1</div>
                         <h3> Vision Statement</h3>
                         <p><p>
-                           <strong>Vision:</strong> "To be a leading SACCO in the provision of affordable and reliable financial services."
-
-This section clearly articulates the long-term goal and direction of the SACCO. It should be concise and inspiring, giving a sense of the ultimate purpose.
+                           <strong>Vision:</strong> "To be the leading SACCO of choice in providing affordable and reliable financial services"
                         </p>
 </p>
                     </div>
@@ -261,8 +259,8 @@ This section clearly articulates the long-term goal and direction of the SACCO. 
                         <div class="number">2</div>
                         <h3> Mission Statement                   </h3>
                         <p><p>
-                           <strong>Mission:</strong>   "To mobilize savings and deposits in order to provide timely, flexible, and affordable credit to members through prudent management and efficient resource mobilization."
-                           <i>This part explains the SACCO's core purpose and how it plans to achieve its vision, focusing on key activities like mobilizing savings and providing affordable credit.</i>
+                           <strong>Mission:</strong>   "To mobilize savings and deposits in order to accrued timely, flexible and affordable credit to
+                           members through prudent management and efficient resource mobilization"
                         </p>
 </p>
                     </div>
@@ -274,8 +272,6 @@ This section clearly articulates the long-term goal and direction of the SACCO. 
                         <h3>Core Values Overview</h3>
                         <p><p>
                           <strong>  Core Values:</strong> "Our SACCO is committed to upholding the following core values in all our operations and services."
-
-This section serves as an introduction to the organization's core principles, setting the tone for the values that follow.
                         </p>
 </p>
                     </div>
@@ -286,17 +282,28 @@ This section serves as an introduction to the organization's core principles, se
                         <div class="number">4</div>
                         <h3> List of Core Values</h3>
                         <p><p><ul>
-                            <li><strong>Integrity:</strong> We act with honesty and fairness in all our dealings.</li>
-                            <li><strong>Democratic:</strong> We value participation and inclusivity, allowing members to have a voice.</li>
-                            <li><strong>Transparency & Accountability:</strong> We ensure that all operations are conducted with openness and that we are answerable to our members.</li>
-                            <li><strong>Effectiveness & Efficiency:</strong> We strive for optimal use of resources to achieve our goals in a timely and cost-effective manner.</li>
-                            <li><strong>Teamwork:</strong> We believe in the power of collaboration to achieve common objectives.</li>
-                            <li><strong>Professionalism:</strong> We adhere to high standards of expertise and conduct in serving our members.</li>
+                            <li><strong>Listening</strong></li>
+                            <li><strong>Honesty</strong> </li>
+                            <li><strong>Teamwork</strong></li>
+                            <li><strong>Democratic</strong></li>
+                            <li><strong>Professionalism</strong> </li>
+                            <li><strong>Integrity</strong> </li>
+                            <li><strong>Transparency & accountability</strong></li>
                         </ul>
                         </p>
 </p>
                     </div>
                 </div>
+
+                <div class="col-md-12 pb-5">
+                    <div class="card">
+                        <div class="number">5</div>
+                        <h3>MOTTO</h3>
+                        <p><p>
+                          <strong>Motto</strong> "The SACCO of choice"
+                        </p>
+</p>
+                 
              
             </div>
             <div class="col-md-3 d-none">
